@@ -40,6 +40,7 @@ skip = ^DBD::
 [Prereqs / RuntimeRequires]
 Devel::StackTrace = 1.30
 PerlIO::utf8_strict = 0
+Template::Tiny = 0.11
 
 [Prereqs / RuntimeRecommends]
 Pod::Simple = 1.41
